Add lightweight WebAssembly JDT LS module